add bridge app and arp proxy.

--- a/Final_Project/makefile
+++ b/Final_Project/makefile
@@ -6,10 +6,10 @@ noONOS: ovs1 ovs2
 
 # Target to set up the bridge and VXLAN
 ovs1:
-	sudo ovs-vsctl add-br ovs1 -- set bridge ovs1 protocols=OpenFlow14 -- set-controller ovs1 tcp:192.168.100.1:6653
+	sudo ovs-vsctl add-br ovs1 -- set bridge ovs1 other_config:datapath-id=0000000000000001 -- set bridge ovs1 protocols=OpenFlow14 -- set-controller ovs1 tcp:192.168.100.1:6653
 
 ovs2:
-	sudo ovs-vsctl add-br ovs2 -- set bridge ovs2 protocols=OpenFlow14 -- set-controller ovs2 tcp:192.168.100.1:6653
+	sudo ovs-vsctl add-br ovs2 -- set bridge ovs2 other_config:datapath-id=0000000000000002 -- set bridge ovs2 protocols=OpenFlow14 -- set-controller ovs2 tcp:192.168.100.1:6653
 	sudo ovs-vsctl add-port ovs2 TO_TA_VXLAN -- set interface TO_TA_VXLAN type=vxlan options:remote_ip=192.168.60.18
 	sudo ip link add veth0 type veth peer name veth1
 	sudo ovs-vsctl add-port ovs2 veth0
