--- a/Final_Project/config.json
+++ b/Final_Project/config.json
@@ -1,24 +1,49 @@
 {
     "ports": {
-       "of:000056d287ab2546/3": {
+        "of:0000000000000001/2": {
             "interfaces": [
                 {
-                    "name": "intf1",
+                    "name": "intffrr",
                     "ips": [
-                        "192.168.70.1/24",
-                        "fd70::1/64",
-                        "fe80:42:c0ff:fea8:46fd/128"
+                        "192.168.70.18/32",
+                        "172.16.18.69/32",
+                        "192.168.63.1/32",
+                        "192.168.100.3/32",
+                        "fd70::18/128",
+                        "fe80::2c02:55ff:fe83:71f8/128"
                     ]
                 }
             ]
         },
-	    "of:0000000000000001/4": {
+       "of:000056d287ab2546/3": {
             "interfaces": [
                 {
-                    "name": "intf2",
+                    "name": "intTAA",
                     "ips": [
-                        "192.168.63.1/24",
-                        "fd63::1/64"
+                        "192.168.70.253/32",
+                        "fd70::1/128"
+                    ]
+                }
+            ]
+        },
+        "of:0000000000000001/3":{ 
+            "interfaces": [
+                {
+                    "name": "intfR2",
+                    "ips": [
+                        "192.168.63.2/32",
+                        "fd63::2/128"
+                    ]
+                }
+            ]
+        },
+        "of:0000000000000002/2":{ 
+            "interfaces": [
+                {
+                    "name": "intfONOS",
+                    "ips": [
+                        "192.168.100.1/32",
+                        "fd63::2/128"
                     ]
                 }
             ]
@@ -27,23 +52,29 @@
     "apps": {
         "nycu.sdnfv.vrouter": {
             "router": {
-                "vrouter": "of:",
-                "vrouter-mac": "",
-                "gateway-ip4": "",
-                "gateway-ip6": "",
-                "gateway-mac": "",
+                "vrouter": "of:0000000000000001/2",
+                "vrouter-mac": "e2:8b:4a:b7:22:b1",
+                "gateway-ip4": "172.16.18.1",
+                "gateway-ip6": "2a0b:4e07:c4:18::1",
+                "gateway-mac": "00:00:00:00:00:02",
+                "vrouterip":"172.16.18.69",
                 "v4-peers": [
-                    "192.168.70.1, 192.168.70.253", 
-                    "192.168.63.1, 192.168.63.2" 
+                    "192.168.63.2",
+                    "192.168.70.253",
+                    "192.168.100.1"
                 ],
-                "v6-peers": []
+                "v6-peers": [
+                    "fd70::1", "fe80::42:c0ff:fea8:46fd",
+                    "fd63::1", "fe80::a01d:f8ff:fea9:4d40"
+                ]
             }
         },
-        "nycu.sdnfv.proxyarp": {
+        "nycu.winlab.proxyarp": {
             "virtual-arps": {
-                "virtual-ip4": "",
-                "virtual-ip6": "",
-                "virtual-mac": ""
+                "virtual-ip4": "172.16.18.1",
+                "virtual-ip6": "2a0b:4e07:c4:18::1",
+                "virtual-mac": "00:00:00:00:00:02",
+                "frr-mac": "e2:8b:4a:b7:22:b1"
             }
         }
     }
