--- a/Final_Project/config.json
+++ b/Final_Project/config.json
@@ -5,12 +5,15 @@
                 {
                     "name": "intffrr",
                     "ips": [
-                        "192.168.70.18/32",
                         "172.16.18.69/32",
                         "192.168.63.1/32",
+                        "192.168.70.18/32",
                         "192.168.100.3/32",
+                        "192.168.18.18/32",
+                        "fd63::1/128",
                         "fd70::18/128",
-                        "fe80::2c02:55ff:fe83:71f8/128"
+                        "fd63:18::18/128",
+                        "2a0b:4e07:c4:18::69/128"
                     ]
                 }
             ]
@@ -18,7 +21,7 @@
        "of:000056d287ab2546/3": {
             "interfaces": [
                 {
-                    "name": "intTAA",
+                    "name": "intTA",
                     "ips": [
                         "192.168.70.253/32",
                         "fd70::1/128"
@@ -32,12 +35,13 @@
                     "name": "intfR2",
                     "ips": [
                         "192.168.63.2/32",
-                        "fd63::2/128"
+                        "fd63::2/128",
+                        "fe80::e8b4:aeff:feb8:120d/128"
                     ]
                 }
             ]
         },
-        "of:0000000000000002/2":{ 
+        "of:0000000000000002/4":{ 
             "interfaces": [
                 {
                     "name": "intfONOS",
@@ -47,32 +51,58 @@
                     ]
                 }
             ]
+        },
+        "of:0000000000000002/2":{ 
+            "interfaces": [
+                {
+                    "name": "intfTM17",
+                    "ips": [
+                        "192.168.17.17/32",
+                        "fd70:17::17/128"
+                    ]
+                }
+            ]
+        },
+        "of:0000000000000002/3":{ 
+            "interfaces": [
+                {
+                    "name": "intfTM16",
+                    "ips": [
+                        "192.168.16.16/32",
+                        "fd70:16::16/128"
+                    ]
+                }
+            ]
         }
     },
     "apps": {
         "nycu.sdnfv.vrouter": {
             "router": {
-                "vrouter": "of:0000000000000001/2",
-                "vrouter-mac": "e2:8b:4a:b7:22:b1",
+                "vrrouting": "of:0000000000000001/2",
+                "vrrouting-mac": "e2:8b:4a:b7:22:b1",
                 "gateway-ip4": "172.16.18.1",
                 "gateway-ip6": "2a0b:4e07:c4:18::1",
                 "gateway-mac": "00:00:00:00:00:02",
-                "vrouterip":"172.16.18.69",
+                "vrrouting-ip":"172.16.18.69",
                 "v4-peers": [
-                    "192.168.63.2",
-                    "192.168.70.253",
-                    "192.168.100.1"
+                    "192.168.63.2", "192.168.63.1",
+                    "192.168.70.253", "192.168.70.18",
+                    "192.168.100.1", "192.168.100.3",
+                    "192.168.17.17", "192.168.18.18",
+                    "192.168.16.16", "192.168.18.18"
                 ],
                 "v6-peers": [
-                    "fd70::1", "fe80::42:c0ff:fea8:46fd",
-                    "fd63::1", "fe80::a01d:f8ff:fea9:4d40"
+                    "fd70::fe", "fd70::18",
+                    "fd63::2", "fd63::1",
+                    "fd70:16::16", "fd70:18::18",
+                    "fd70:17::17", "fd70:18::18"
                 ]
             }
         },
         "nycu.winlab.proxyarp": {
             "virtual-arps": {
                 "virtual-ip4": "172.16.18.1",
-                "virtual-ip6": "2a0b:4e07:c4:18::1",
+                "virtual-ip6": "ff02::1:ff00:1",
                 "virtual-mac": "00:00:00:00:00:02",
                 "frr-mac": "e2:8b:4a:b7:22:b1"
             }
