--- a/Final_Project/config/R1/frr.conf
+++ b/Final_Project/config/R1/frr.conf
@@ -15,13 +15,13 @@ router bgp 65180
     neighbor 192.168.63.2 remote-as 65181
     neighbor 192.168.63.2 peer-group PEER
 
-    !neighbor 192.168.70.17 remote-as 65170
-    !neighbor 192.168.70.17 peer-group PEER
-    !neighbor 192.168.70.17 solo
+    neighbor 192.168.17.17 remote-as 65170
+    neighbor 192.168.17.17 peer-group PEER
+    neighbor 192.168.17.17 solo
     
-    !neighbor 192.168.70.18 remote-as 65180
-    !neighbor 192.168.70.18 peer-group PEER
-    !neighbor 192.168.70.18 solo
+    neighbor 192.168.16.16 remote-as 65160
+    neighbor 192.168.16.16 peer-group PEER
+    neighbor 192.168.16.16 solo
 
     neighbor 192.168.70.253 remote-as 65000
     neighbor 192.168.70.253 password winlab.nycu
@@ -31,13 +31,13 @@ router bgp 65180
     neighbor fd63::2 remote-as 65181
     neighbor fd63::2 peer-group PEER
     
-    !neighbor fd70::17 remote-as 65170
-    !neighbor fd70::17 peer-group PEER
-    !neighbor fd70::17 solo
+    neighbor fd70:17::17 remote-as 65170
+    neighbor fd70:17::17 peer-group PEER
+    neighbor fd70:17::17 solo
 
-    !neighbor fd70::18 remote-as 65180
-    !neighbor fd70::18 peer-group PEER
-    !neighbor fd70::18 solo
+    neighbor fd70:16::16 remote-as 65160
+    neighbor fd70:16::16 peer-group PEER
+    neighbor fd70:16::16 solo
     
     neighbor fd70::fe remote-as 65000
     neighbor fd70::fe password winlab.nycu
@@ -48,24 +48,24 @@ router bgp 65180
      network 172.16.18.0/24
      neighbor 192.168.63.2 activate   
      neighbor 192.168.70.253 activate
-     !neighbor 192.168.70.17 activate
-     !neighbor 192.168.70.18 activate
+     neighbor 192.168.17.17 activate
+     neighbor 192.168.16.16 activate
      no neighbor fd63::2 activate
      no neighbor fd70::fe activate
-     !no neighbor fd70::17 activate
-     !no neighbor fd70::18 activate
+     no neighbor fd70:17::17 activate
+     no neighbor fd70:16::16 activate
     exit-address-family
 
     address-family ipv6 unicast
      network 2a0b:4e07:c4:18::/64
      neighbor fd63::2 activate
      neighbor fd70::fe activate
-     !neighbor fd70::17 activate
-     !neighbor fd70::18 activate
+     neighbor fd70:17::17 activate
+     neighbor fd70:16::16 activate
      no neighbor 192.168.63.2 activate
      no neighbor 192.168.70.253 activate
-     !no neighbor 192.168.70.17 activate
-     !no neighbor 192.168.70.18 activate
+     no neighbor 192.168.17.17 activate
+     no neighbor 192.168.16.16 activate
     exit-address-family    
 !
     log stdout
