--- a/Final_Project/config.json
+++ b/Final_Project/config.json
@@ -18,17 +18,6 @@
                 }
             ]
         },
-       "of:000056d287ab2546/3": {
-            "interfaces": [
-                {
-                    "name": "intTA",
-                    "ips": [
-                        "192.168.70.253/32",
-                        "fd70::1/128"
-                    ]
-                }
-            ]
-        },
         "of:0000000000000001/3":{ 
             "interfaces": [
                 {
@@ -41,13 +30,13 @@
                 }
             ]
         },
-        "of:0000000000000002/4":{ 
+       "of:000056d287ab2546/3": {
             "interfaces": [
                 {
-                    "name": "intfONOS",
+                    "name": "intTA",
                     "ips": [
-                        "192.168.100.1/32",
-                        "fd63::2/128"
+                        "192.168.70.253/32",
+                        "fd70::1/128"
                     ]
                 }
             ]
@@ -73,6 +62,17 @@
                     ]
                 }
             ]
+        },
+        "of:0000000000000002/4":{ 
+            "interfaces": [
+                {
+                    "name": "intfONOS",
+                    "ips": [
+                        "192.168.100.1/32",
+                        "fd63::2/128"
+                    ]
+                }
+            ]
         }
     },
     "apps": {
@@ -80,10 +80,10 @@
             "router": {
                 "vrrouting": "of:0000000000000001/2",
                 "vrrouting-mac": "e2:8b:4a:b7:22:b1",
+                "vrrouting-ip":"172.16.18.69",
                 "gateway-ip4": "172.16.18.1",
                 "gateway-ip6": "2a0b:4e07:c4:18::1",
                 "gateway-mac": "00:00:00:00:00:02",
-                "vrrouting-ip":"172.16.18.69",
                 "v4-peers": [
                     "192.168.63.2", "192.168.63.1",
                     "192.168.70.253", "192.168.70.18",
@@ -101,8 +101,12 @@
         },
         "nycu.winlab.proxyarp": {
             "virtual-arps": {
+                "edge-ports":[
+                    "of:000056d287ab2546/3"
+                ],
                 "virtual-ip4": "172.16.18.1",
                 "virtual-ip6": "ff02::1:ff00:1",
+                "virtual-ip6-adv": "2a0b:4e07:c4:18::1",
                 "virtual-mac": "00:00:00:00:00:02",
                 "frr-mac": "e2:8b:4a:b7:22:b1"
             }
