--- a/Final_Project/makefile
+++ b/Final_Project/makefile
@@ -44,6 +44,7 @@ ping6:
 	sudo docker exec -it R1 ping6 -c3 2a0b:4e07:c4:18::2
 	sudo docker exec -it h1 ping6 -c3 2a0b:4e07:c4:18::69 # h1 ping FRR
 	sudo docker exec -it h1 ping6 -c3 2a0b:4e07:c4:118::2 # h1 ping h2
+	sudo docker exec -it h2 ping6 -c3 2a0b:4e07:c4:18::2 # h2 ping h1
 route:
 	sudo docker exec -it R2 ip route 
 	sudo docker exec -it R1 ip route
