1/7, stay in TA's lab for 2 hours.

--- a/Final_Project/config/R1/frr.conf
+++ b/Final_Project/config/R1/frr.conf
@@ -3,6 +3,20 @@
 frr defaults datacenter
 fpm connection ip 192.168.100.1 port 2620
 !
+ip prefix-list ALLOW_SELECTED seq 10 permit 172.16.18.0/24
+ip prefix-list ALLOW_SELECTED seq 20 permit 172.17.18.0/24
+!
+route-map BROADCAST_SELECTED permit 10
+    match ip address prefix-list ALLOW_SELECTED
+route-map BROADCAST_SELECTED deny 20
+!
+ipv6 prefix-list ALLOW_SELECTED_V6 seq 10 permit 2a0b:4e07:c4:18::/64
+ipv6 prefix-list ALLOW_SELECTED_V6 seq 20 permit 2a0b:4e07:c4:118::/64
+!
+route-map BROADCAST_SELECTED_V6 permit 10
+    match ipv6 address prefix-list ALLOW_SELECTED_V6
+route-map BROADCAST_SELECTED_V6 deny 20
+!
 router bgp 65180
     bgp router-id 172.16.18.69
     timers bgp 3 9
@@ -15,13 +29,13 @@ router bgp 65180
     neighbor 192.168.63.2 remote-as 65181
     neighbor 192.168.63.2 peer-group PEER
 
-    neighbor 192.168.17.17 remote-as 65170
-    neighbor 192.168.17.17 peer-group PEER
-    neighbor 192.168.17.17 solo
+    neighbor 192.168.87.17 remote-as 65170
+    neighbor 192.168.87.17 peer-group PEER
+    neighbor 192.168.87.17 solo
     
-    neighbor 192.168.16.16 remote-as 65160
-    neighbor 192.168.16.16 peer-group PEER
-    neighbor 192.168.16.16 solo
+    neighbor 192.168.87.16 remote-as 65160
+    neighbor 192.168.87.16 peer-group PEER
+    neighbor 192.168.87.16 solo
 
     neighbor 192.168.70.253 remote-as 65000
     neighbor 192.168.70.253 password winlab.nycu
@@ -31,13 +45,13 @@ router bgp 65180
     neighbor fd63::2 remote-as 65181
     neighbor fd63::2 peer-group PEER
     
-    neighbor fd70:17::17 remote-as 65170
-    neighbor fd70:17::17 peer-group PEER
-    neighbor fd70:17::17 solo
+    neighbor fd87::17 remote-as 65170
+    neighbor fd87::17 peer-group PEER
+    neighbor fd87::17 solo
 
-    neighbor fd70:16::16 remote-as 65160
-    neighbor fd70:16::16 peer-group PEER
-    neighbor fd70:16::16 solo
+    neighbor fd87::16 remote-as 65160
+    neighbor fd87::16 peer-group PEER
+    neighbor fd87::16 solo
     
     neighbor fd70::fe remote-as 65000
     neighbor fd70::fe password winlab.nycu
@@ -48,24 +62,30 @@ router bgp 65180
      network 172.16.18.0/24
      neighbor 192.168.63.2 activate   
      neighbor 192.168.70.253 activate
-     neighbor 192.168.17.17 activate
-     neighbor 192.168.16.16 activate
+     neighbor 192.168.87.17 activate
+     neighbor 192.168.87.16 activate
      no neighbor fd63::2 activate
      no neighbor fd70::fe activate
-     no neighbor fd70:17::17 activate
-     no neighbor fd70:16::16 activate
+     no neighbor fd87::17 activate
+     no neighbor fd87::16 activate
+     neighbor 192.168.87.16 route-map BROADCAST_SELECTED out
+     neighbor 192.168.87.17 route-map BROADCAST_SELECTED out
+     neighbor 192.168.70.253 route-map BROADCAST_SELECTED out
     exit-address-family
 
     address-family ipv6 unicast
      network 2a0b:4e07:c4:18::/64
      neighbor fd63::2 activate
      neighbor fd70::fe activate
-     neighbor fd70:17::17 activate
-     neighbor fd70:16::16 activate
+     neighbor fd87::17 activate
+     neighbor fd87::16 activate
      no neighbor 192.168.63.2 activate
      no neighbor 192.168.70.253 activate
-     no neighbor 192.168.17.17 activate
-     no neighbor 192.168.16.16 activate
+     no neighbor 192.168.87.17 activate
+     no neighbor 192.168.87.16 activate
+     neighbor fd87::16 route-map BROADCAST_SELECTED_V6 out
+     neighbor fd87::17 route-map BROADCAST_SELECTED_V6 out
+     neighbor fd70::fe route-map BROADCAST_SELECTED_V6 out
     exit-address-family    
 !
     log stdout
