1/8, final commit, staying in the lab for consecutive 9.5 hours.

--- a/Final_Project/config.json
+++ b/Final_Project/config.json
@@ -13,7 +13,8 @@
                         "fd63::1/128",
                         "fd70::18/128",
                         "fd87::18/128",
-                        "2a0b:4e07:c4:18::69/128"
+                        "2a0b:4e07:c4:18::69/128",
+                        "fd70::18/128"
                     ]
                 }
             ]
@@ -36,7 +37,10 @@
                     "name": "intTA",
                     "ips": [
                         "192.168.70.253/32",
-                        "fd70::fe/128"
+                        "fd70::fe/128",
+                        "ff02::1:ff00:fe/128",
+                        "ff02::1:ff00:fe5e/128",
+                        "fe80::42:c0ff:fea8:46fd/128"
                     ]
                 }
             ]
@@ -58,7 +62,9 @@
                     "name": "intfTM16",
                     "ips": [
                         "192.168.87.16/32",
-                        "fd87::16/128"
+                        "fd87::16/128",
+                        "ff02::1:ff00:16/128",
+                        "fe80::2c02:55ff:fe83:71f8/128"
                     ]
                 }
             ]
@@ -94,7 +100,11 @@
                     "fd70::fe", "fd70::18",
                     "fd63::2", "fd63::1",
                     "fd87::16", "fd87::18",
-                    "fd87::17", "fd87::18"
+                    "fd87::17", "fd87::18",
+                    "ff02::1:ff00:fe", "fd70::18",
+                    "ff02::1:ff00:fe5e", "fd70::18",
+                    "ff02::1:ff00:16", "fd70::18",
+                    "fe80::2c02:55ff:fe83:71f8", "fd87::18"
                 ]
             }
         },
