--- a/Final_Project/makefile
+++ b/Final_Project/makefile
@@ -27,24 +27,22 @@ shell:
 	sudo ./topo_utils.sh
 	
 install:
+	cd /home/demo/Documents/repository/Final_Project/vrouter && onos-app localhost install! target/vrouter-1.0-SNAPSHOT.oar || true
 	cd /home/demo/Documents/repository/Final_Project/ProxyArp && onos-app localhost install! target/ProxyArp-1.0-SNAPSHOT.oar || true
 	cd /home/demo/Documents/repository/Final_Project/bridge && onos-app localhost install! target/bridge-1.0-SNAPSHOT.oar || true
-	cd /home/demo/Documents/repository/Final_Project/vrouter && onos-app localhost install! target/vrouter-1.0-SNAPSHOT.oar || true
 	onos-netcfg localhost config.json
 ping:
 	sudo docker exec -it h1 ping -c3 172.16.18.69 # h1 ping FRR(R1)
-	# sudo docker exec -it h1 ping -c3 192.168.63.1 # h1 ping FRR(R1), but different subnet
 	sudo docker exec -it h1 ping -c3 172.17.18.2 # h1 ping h2
 	sudo docker exec -it R2 ping -c3 192.168.63.1 # R2 ping FRR(R1)
 	# sudo docker exec -it R2 ping -c3 172.16.18.2 # R2 ping h1
-	sudo docker exec -it h2 ping -c3 172.16.18.2 # h2 ping h1
-	sudo docker exec -it h1 ping -c3 192.168.70.253 # h1 ping ta
-	sudo docker exec -it h2 ping -c3 192.168.70.253 # h2 ping ta, is working now
+	# sudo docker exec -it h2 ping -c3 172.16.18.2 # h2 ping h1
+	sudo docker exec -it R1 ping -c3 192.168.70.253 # R1 ping ta
 ping6:
-	sudo docker exec -it R1 ping6 -c3 2a0b:4e07:c4:18::2
 	sudo docker exec -it h1 ping6 -c3 2a0b:4e07:c4:18::69 # h1 ping FRR
 	sudo docker exec -it h1 ping6 -c3 2a0b:4e07:c4:118::2 # h1 ping h2
-	sudo docker exec -it h2 ping6 -c3 2a0b:4e07:c4:18::2 # h2 ping h1
+	# sudo docker exec -it h2 ping6 -c3 2a0b:4e07:c4:18::2 # h2 ping h1
+	sudo docker exec -it R1 ping -c3 fd70::fe # R1 ping ta
 route:
 	sudo docker exec -it R2 ip route 
 	sudo docker exec -it R1 ip route
